name:                syntax-printer
version:             0.1.0.0
synopsis:            Text and ByteString printers for 'syntax'.
license:             MIT
license-file:        LICENSE
author:              Paweł Nowak
maintainer:          Paweł Nowak <pawel834@gmail.com>
copyright:           Paweł Nowak 2014
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Syntax.Printer
                       Data.Syntax.Printer.Text
                       Data.Syntax.Printer.Text.Lazy
  build-depends:       base >=4.7 && <4.8, semi-iso >= 0.5, syntax >= 0.3, text, bytestring, scientific
  default-language:    Haskell2010
  ghc-options:         -Wall
