name:                syntax-printer
version:             1.0.0.0
synopsis:            Text and ByteString printers for 'syntax'.
license:             MIT
license-file:        LICENSE
author:              Paweł Nowak
maintainer:          Paweł Nowak <pawel834@gmail.com>
copyright:           Paweł Nowak 2014
category:            Data
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC==8.0.2, GHC==8.2.2, GHC==8.4.3, GHC==8.6.1

library
  exposed-modules:     Data.Syntax.Printer.Consumer
                       Data.Syntax.Printer.Text
                       Data.Syntax.Printer.Text.Lazy
                       Data.Syntax.Printer.ByteString
                       Data.Syntax.Printer.ByteString.Lazy
  build-depends:       base       >= 4.9 && <4.13
                     , semi-iso   >= 1
                     , syntax     >= 1
                     , text       >= 1
                     , bytestring >= 0.10
                     , scientific >= 0.3
                     , bifunctors
                     , semigroupoids
                     , vector
  default-language:    Haskell2010
  ghc-options:         -Wall
